<resources>
    <string name="app_name">Private Dossier and Records</string>
    <string name="take_picture">Take a\nPicture</string>
    <string name="take_note">Take a\nNote</string>
    <string name="title_please">Specify Title</string>
    <string name="enter_text_for_your_note">Add your text here</string>
    <string name="default_select_item_title">Please select an Item</string>
    <string name="specify_title">Please choose a title</string>
    <string name="edit">Edit</string>
    <string name="gallery">View\nPictures</string>
    <string name="import_dir">Import Directory</string>
    <string name="view_pictures">View Pictures</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="gallery_title">Picture Gallery</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="projects">Projects</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Description of Project</string>
    <string name="editDescription">Description</string>
    <string name="delete_all_images">Delete all Images</string>
    <string name="sfs_actions">SFS Actions</string>
    <string name="change_password">Change Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="re_enter_new_pass">Re-enter New Password</string>
    <string name="task_description">Details</string>
    <string name="specify_task_details">Enter details on the task</string>
    <string name="specify_project_details">Enter project details/description</string>
    <string name="detail_file_name">Filename</string>
    <string name="detail_file_size">Size (chunks)</string>
    <string name="files_will_be_deleted">The following Files will be Deleted</string>
    <string name="about_sfs">Secure File System Details</string>
    <string name="units">Units</string>
    <string name="used">used</string>
    <string name="fileSize">File Size (units)</string>
    <string name="createDate">Create Date</string>
    <string name="slide_show">Slide Show</string>
    <string name="stop_slideshow">Stop Slideshow</string>
    <string name="slide_show_delay">Slide Show Delay</string>
</resources>
