<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/kds_section_background"
    android:maxHeight="75dp"
    android:padding="@dimen/margin"
    tools:background="@color/kds_dark">


    <TextView
        android:id="@+id/textView5"
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/about_sfs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numUnits"
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="9000" />

    <TextView
        android:id="@+id/textView7"
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:text="@string/units"
        app:layout_constraintStart_toEndOf="@id/numUnits"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/divider"
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" - "
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/unitsUsed"
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="2788" />

    <TextView
        style="@style/kds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:text="@string/used"
        app:layout_constraintStart_toEndOf="@id/unitsUsed"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>