<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/kds_attention_background">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="3">

        <Button
            android:id="@+id/takePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/take_picture"
            android:layout_margin="@dimen/margin"
            android:onClick="onTakePicture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/takeNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:onClick="onTakeNote"
            android:text="@string/take_note"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/view_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="onViewNotes"
            android:text="Notes"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takeNote" />

        <Button
            android:id="@+id/view_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="onViewPictures"
            android:text="@string/gallery"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takeNote" />

        <Button
            android:id="@+id/sfs_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:onClick="onSelectActions"
            android:text="@string/sfs_actions"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_notes" />

        <Button
            android:padding="20dp"
            android:id="@+id/projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            style="@style/kds_default_button"
            android:onClick="onSelectProjects"
            android:scaleType="fitCenter"
            android:layout_margin="@dimen/margin"
            android:text="@string/projects"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_notes" />


    </GridLayout>

    <include
        android:id="@+id/overlay"
        layout="@layout/layout_logo_screen"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>